# study

./: package-lock.json
client/: .env  package-lock.json  package.json  tsconfig.json
client/config/: db.ts
client/src/: apollo-client.ts
client/src/apollo/: resolvers.ts  typeDefs.ts
client/src/app/: layout.tsx  page.tsx
client/src/app/profile/: layout.tsx  page.tsx
client/src/components/: Component.tsx  CreateButton.tsx  UpdateButton.tsx
client/src/pages/api/: graphql.ts
client/src/styles/: _common.scss  home.module.scss
server/socketserver/01.EchoServer/: CMakeLists.txt
server/socketserver/01.EchoServer/src/: main.cpp
server/socketserver/02.ChatServer/: CMakeLists.txt
server/socketserver/02.ChatServer/src/: MultiplexedServer.hpp  Packet.h  PacketManager.cpp  PacketManager.h  RecvRingBuffer.h  Room.cpp  Room.h  RoomManager.h  Session.h  UserManager.h  main.cpp
server/socketserver/03.WebSocketServer/: CMakeLists.txt
server/socketserver/03.WebSocketServer/src/: ErrorCode.h  MultiplexedServer.hpp  Packet.h  PacketManager.cpp  PacketManager.h  Session.h  main.cpp
server/webserver/: package-lock.json  package.json
server/webserver/src/: app.module.ts  graphql.schema.ts  main.ts
server/webserver/src/users/: users.graphql  users.module.ts  users.resolver.ts  users.service.ts
server/webserver/src/users/dto/: create-user.dto.ts
